--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   height: 100vh;
   width: 100%;
   align-self: center;
-  background-image: url(/images/bg-intro-desktop.png);
+  background-image: url(./images/bg-intro-desktop.png);
   background-color: hsl(0, 100%, 74%);
 }
 
