--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h4 {
   font-size: 14px;
   background-color: hsl(248, 32%, 49%);
   text-align: center;
-  padding: 18px 0;
+  padding: 18px 15px;
   border-radius: 8px;
   margin-bottom: 30px;
   box-shadow: 0 8px rgba(0, 0, 0, 0.1);
@@ -147,7 +147,8 @@ a:hover {
 .icon-error {
   position: absolute;
   right: 18px;
-  top: 11px;
+  top: 15px;
+  width:18px;
   font-size: 20px;
   color: #2ecc71;
   display: none;
